# browser-agent

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
browser_agent_cli/: __init__.py  cli.py
