[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-agent"
version = "0.1.0"
description = "A CLI tool for browser automation using browser-use"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Neil Chen", email = "neil@vela.studio" }]
dependencies = [
    "browser-use",
    "langchain-openai",
    "python-dotenv",
    "playwright"
]

[project.scripts]
browser-agent = "browser_agent_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["browser_agent_cli"]